pod-ngnix.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: app-ngnix
  labels:
    app: nginx
spec:
  containers:
    - name: nginx-container
      image: nginx:latest
      ports:
        - containerPort: 80
