lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-svc
  labels:
    app: mywebapp
spec:
  selector:
    app: mywebapp
  type: LoadBalancer
  ports:
    - nodePort : 30001 
      port: 8000
      targetPort: 80
