loadbal.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-svc
spec:
  type: LoadBalancer
  selector:
    app: mywebapp 
  ports:
    - port: 8001 # cluster port 
      targetPort: 80 # container port
