makerapp-v1-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: makerapp-v1-deploy-service
  labels: 
    app: makerapp-v1-deploy  
spec:
  type: NodePort
  selector:
    app: makerapp-v1-deploy
  ports:
    - port: 8082
      targetPort: 80
