mywebapp-clus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-svc
spec:
  selector:
    app: mywebapp
  ports:
    - port: 8082
      targetPort: 80
