mywebapp-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-svc
spec:
  clusterIP: None
  selector:
    app: mywebapp
  ports:
    - port: 8082
      targetPort: 80
