www.yaml
apiVersion: v1
kind: Service
metadata:
  name: www-svc
spec:
  selector:
    app: www
  ports:
    - port: 80
      targetPort: 80
